--- a/src/styles/blocks/footer/__container/footer__container.css
+++ b/src/styles/blocks/footer/__container/footer__container.css
@@ -1,16 +1,25 @@
 .footer__container {
   max-width: 1200px;
   display: grid;
-  grid-template-columns: 6fr 4fr;
+  grid-template-columns: 13fr 7fr;
   grid-column-gap: 40px;
   margin: 0 auto;
+  box-sizing: border-box;
+  padding: 39px 39px 20px;
 }
 
-@media screen and (max-width: 720px) {
+@media screen and (max-width: 1024px) {
+  .footer__container {
+    padding-top: 25px;
+  }
+}
+
+@media screen and (max-width: 700px) {
   .footer__container {
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
+    padding: 39px 20px 20px;
   }
 }
