--- a/src/styles/blocks/footer/__creators/footer__creators.css
+++ b/src/styles/blocks/footer/__creators/footer__creators.css
@@ -1,14 +1,20 @@
 .footer__creators {
   grid-column: 2/3;
-  grid-row: 3/4;
+  grid-row: 4;
   font-family: "Ubuntu", sans-serif;
   font-weight: 500;
   font-size: 15px;
   line-height: 140%;
-  margin-top: 40px;
 }
 
-@media screen and (max-width: 720px) {
+@media screen and (max-width: 1024px) {
+  .footer__creators {
+    font-weight: 300;
+    font-size: 12px;
+  }
+}
+
+@media screen and (max-width: 700px) {
   .footer__creators {
     font-weight: 300;
     font-size: 12px;
