--- a/src/styles/blocks/footer/__subtitle/footer__subtitle.css
+++ b/src/styles/blocks/footer/__subtitle/footer__subtitle.css
@@ -9,10 +9,17 @@
   margin: 5px 0 0;
 }
 
-@media screen and (max-width: 720px) {
+@media screen and (max-width: 1024px) {
   .footer__subtitle {
+    max-width: 280px;
     font-weight: 300;
     font-size: 14px;
+    margin: 11px 0 0;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .footer__subtitle {
     margin: 10px 0 15px;
   }
 }
