--- a/src/styles/blocks/opened-petition/__date/opened-petition__date.css
+++ b/src/styles/blocks/opened-petition/__date/opened-petition__date.css
@@ -1,6 +1,20 @@
-.opened-petition__date {
+.opened-petition__data {
+  grid-column: 2;
+  grid-row: 1;
+  justify-self: end;
   font-weight: 500;
-  font-size: 23px;
+  font-size: 20px;
   line-height: 140%;
-  margin: 0;
+}
+
+@media screen and (max-width: 1024px) {
+  .opened-petition__data {
+    margin: 30px 0 0;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .opened-petition__data {
+    font-size: 16px;
+  }
 }
