--- a/src/styles/blocks/opened-petition/__title/opened-petition__title.css
+++ b/src/styles/blocks/opened-petition/__title/opened-petition__title.css
@@ -2,5 +2,18 @@
   font-weight: bold;
   font-size: 25px;
   line-height: 120%;
-  margin: 0 0 30px;
+  margin: 0;
+}
+
+@media screen and (max-width: 1024px) {
+  .opened-petition__title {
+    font-size: 18px;
+    margin: 20px 0 0;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .opened-petition__title {
+    font-size: 16px;
+  }
 }
