--- a/src/styles/blocks/petitions/__container/_title/petitions__container_title.css
+++ b/src/styles/blocks/petitions/__container/_title/petitions__container_title.css
@@ -1,7 +1,11 @@
 .petitions__container_title {
-  min-height: 120px;
-  display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(2, max-content);
   margin: 20px 20px 15px;
+}
+
+@media screen and (max-width: 700px) {
+  .petitions__container_title {
+    margin: 15px 15px 5px;
+  }
 }
