--- a/src/styles/blocks/petitions/__item/petitions__item.css
+++ b/src/styles/blocks/petitions/__item/petitions__item.css
@@ -1,11 +1,10 @@
 .petitions__item {
-  background: #F4F5FF;
-  min-height: 350px;
+  background: #f4f5ff;
   position: relative;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  box-shadow: 0px 0px 14px #C9CEFF;
+  box-shadow: 0px 0px 14px #c9ceff;
   border-radius: 10px;
   cursor: pointer;
 }
