--- a/src/styles/blocks/petitions/__rating/petitions__rating.css
+++ b/src/styles/blocks/petitions/__rating/petitions__rating.css
@@ -1,5 +1,12 @@
 .petitions__rating {
+  align-self: end;
   font-size: 20px;
   line-height: 120%;
-  margin: 0 0 0 5px;
+  margin: 0;
+}
+
+@media screen and (max-width: 700px) {
+  .petitions__rating {
+    font-size: 16px;
+  }
 }
