--- a/src/styles/blocks/petitions/__title/petitions__title.css
+++ b/src/styles/blocks/petitions/__title/petitions__title.css
@@ -7,3 +7,17 @@
   line-height: 120%;
   margin: 0;
 }
+
+@media screen and (max-width: 1024px) {
+  .petitions__title {
+    min-height: 98px;
+    font-size: 23px;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .petitions__title {
+    min-height: 75px;
+    font-size: 20px;
+  }
+}
