--- a/src/styles/blocks/sign-in-up-req/__btn/_type/sign-in-up-req__btn_publish.css
+++ b/src/styles/blocks/sign-in-up-req/__btn/_type/sign-in-up-req__btn_publish.css
@@ -1,5 +1,11 @@
 .sign-in-up-req__btn_publish {
-  width: 180px;
-  justify-self: center;
+  width: 190px;
+  font-size: 19px;
   margin: 40px 0 60px;
+}
+
+@media screen and (max-width: 700px) {
+  .sign-in-up-req__btn_publish {
+    justify-self: center;
+  }
 }
