--- a/src/styles/blocks/sign-in-up-req/__container/sign-in-up-req__container.css
+++ b/src/styles/blocks/sign-in-up-req/__container/sign-in-up-req__container.css
@@ -6,11 +6,14 @@
   align-items: center;
   row-gap: 35px;
   margin: 0 auto;
+  box-sizing: border-box;
+  padding: 0px 39px;
 }
 
 @media screen and (max-width: 720px) {
   .sign-in-up-req__container {
     grid-template-columns: 1fr;
     row-gap: 10px;
+    padding: 0px 20px;
   }
 }
