--- a/src/styles/blocks/user/__box/user__box.css
+++ b/src/styles/blocks/user/__box/user__box.css
@@ -3,16 +3,21 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  margin: 40px 0;
   padding: 70px 65px;
   box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.15);
   border-radius: 5px;
   box-sizing: border-box;
 }
 
-@media screen and (max-width: 720px) {
+@media screen and (max-width: 1024px) {
   .user__box {
-    margin: 20px 0 -46px;
+    padding: 40px 25px;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .user__box {
+    margin: 5px 0 0;
     padding: 30px 20px;
   }
 }
