--- a/src/styles/blocks/user/__question/user__question.css
+++ b/src/styles/blocks/user/__question/user__question.css
@@ -1,8 +1,8 @@
 .user__question {
-  font-family: 'Lora', sans-serif;
+  align-self: center;
+  font-family: 'Ubuntu', sans-serif;
   font-size: 16px;
   line-height: 140%;
   text-align: center;
-  color: #8E9295;
-  margin-top: 20px;
+  color:#8E9295;
 }
