--- a/src/styles/blocks/user/user.css
+++ b/src/styles/blocks/user/user.css
@@ -5,14 +5,23 @@
   grid-template-columns: repeat(2, 1fr);
   justify-items: center;
   align-items: center;
-  margin: 0 auto;
-  padding: 0 20px;
+  margin: 40px auto 93px;
   box-sizing: border-box;
+  padding: 0 39px;
 }
 
-@media screen and (max-width: 720px) {
+@media screen and (max-width: 1024px) {
   .user {
+    max-width: 450px;
     grid-template-columns: 1fr;
-    row-gap: 20px;
+    grid-row-gap: 20px;
+    margin: 15px auto 123px;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .user {
+    margin: 0 auto 50px;
+    padding: 0 20px;
   }
 }
