--- a/src/styles/blocks/add-new/__container/add-new__container.css
+++ b/src/styles/blocks/add-new/__container/add-new__container.css
@@ -1,13 +1,14 @@
 .add-new__container {
   grid-column: 1/3;
-  grid-row: 5/6;
+  grid-row: 6;
   display: flex;
   justify-content: flex-end;
 }
 
-@media screen and (max-width: 720px) {
+@media screen and (max-width: 700px) {
   .add-new__container {
     grid-column: 1;
+    grid-row: 8;
     justify-content: center;
   }
 }
