--- a/src/styles/blocks/add-new/__input/add-new__input.css
+++ b/src/styles/blocks/add-new/__input/add-new__input.css
@@ -1,14 +1,15 @@
 .add-new__input {
+  grid-row: 3/5;
   width: 100%;
-  height: 255px;
   border: 2px solid rgba(28, 69, 131, 0.5);
   box-sizing: border-box;
   padding: 20px;
   border-radius: 5px;
   font-size: 20px;
   line-height: 140%;
-  margin: 25px 0 10px;
+  margin: 25px 0 30px;
   resize: none;
+  color: #02214F;
 }
 
 .add-new__input:hover {
@@ -16,7 +17,7 @@
   outline: none;
 }
 
-@media screen and (max-width: 720px) {
+@media screen and (max-width: 700px) {
   .add-new__input {
     font-size: 16px;
     height: 120px;
