--- a/src/styles/blocks/add-new/__poem-text/add-new__poem-text.css
+++ b/src/styles/blocks/add-new/__poem-text/add-new__poem-text.css
@@ -1,20 +1,25 @@
 .add-new__poem-text {
   width: 100%;
-  min-height: 210px;
   border: 2px solid rgba(28, 69, 131, 0.5);
   box-sizing: border-box;
-  padding: 20px;
-  margin: 25px 0 10px;
-  border-radius: 5px;
+  padding: 0 20px 20px;
+  margin: 0 0 30px;
+  border-top: none;
+  border-radius: 0 0 5px 5px;
   font-size: 20px;
   line-height: 140%;
 }
 
-@media screen and (max-width: 720px) {
+@media screen and (max-width: 1024px) {
+  .add-new__poem-text {
+    font-size: 18px;
+  }
+}
+
+@media screen and (max-width: 700px) {
   .add-new__poem-text {
     min-height: 120px;
-    border-top: none;
-    border-radius: 0 0 5px 5px;
     margin: 0;
+    font-size: 16px;
   }
 }
