--- a/src/styles/blocks/add-new/__poem-title/add-new__poem-title.css
+++ b/src/styles/blocks/add-new/__poem-title/add-new__poem-title.css
@@ -1,11 +1,20 @@
 .add-new__poem-title {
   width: 100%;
-  height: 255px;
   border: 2px solid rgba(28, 69, 131, 0.5);
   box-sizing: border-box;
   padding: 20px;
-  margin: 25px 0 10px;
-  border-radius: 5px;
+  margin: 25px 0 0;
+  border-bottom: none;
+  border-radius: 5px 5px 0 0;
   font-size: 20px;
   line-height: 140%;
+}
+
+@media screen and (max-width: 700px) {
+  .add-new__poem-title {
+    margin: 0;
+    border-top: none;
+    border-radius: 0;
+    font-size: 16px;
+  }
 }
