--- a/src/styles/blocks/add-new/__select-cat/add-new__select-cat.css
+++ b/src/styles/blocks/add-new/__select-cat/add-new__select-cat.css
@@ -4,10 +4,10 @@
   font-size: 16px;
   line-height: 140%;
   color: #101010;
-  margin: 0;
+  margin: 0 0 20px;
 }
 
-@media screen and (max-width: 720px) {
+@media screen and (max-width: 700px) {
   .add-new__select-cat {
     display: none;
   }
