--- a/src/styles/blocks/add-new/__text-button/add-new__text-button.css
+++ b/src/styles/blocks/add-new/__text-button/add-new__text-button.css
@@ -8,9 +8,10 @@
   line-height: 140%;
   color: rgba(22, 63, 124, 0.5);
   margin: 0;
+  margin-top: 40px;
 }
 
-@media screen and (max-width: 720px) {
+@media screen and (max-width: 700px) {
   .add-new__text-button {
     display: none;
   }
