--- a/src/styles/blocks/button/button.css
+++ b/src/styles/blocks/button/button.css
@@ -1,4 +1,5 @@
 .button {
+  width: 200px;
   height: 50px;
   background: #3F5BFB;
   border: none;
@@ -17,8 +18,10 @@
   border-radius: 5px;
 }
 
-@media screen and (max-width: 720px) {
+@media screen and (max-width: 1024px) {
   .button {
+    width: 180px;
+    height: 40px;
     font-size: 16px;
   }
 }
