--- a/src/styles/blocks/header/__log-container/header__log-container.css
+++ b/src/styles/blocks/header/__log-container/header__log-container.css
@@ -1,6 +1,20 @@
 .header__log-container {
+  position: absolute;
+  bottom: -150px;
+  left: -200px;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin: 0 30px;
+  flex-direction: column;
+  background: #F4F5FF;
+  box-shadow: 0px 4px 14px rgba(93, 125, 173, 0.6);
+  border-radius: 10px;
+  text-align: start;
+  padding: 30px 20px 24px 20px;
+}
+
+@media screen and (max-width: 700px) {
+  .header__log-container  {
+    bottom: -125px;
+    left: -160px;
+    padding: 25px 20px;
+  }
 }
