--- a/src/styles/blocks/header/__logo/header__logo.css
+++ b/src/styles/blocks/header/__logo/header__logo.css
@@ -2,3 +2,10 @@
   display: block;
   height: 50px;
 }
+
+@media screen and (max-width: 700px) {
+  .header__logo {
+    width: 38px;
+    height: 30px;
+  }
+}
