--- a/src/styles/blocks/header/header.css
+++ b/src/styles/blocks/header/header.css
@@ -3,6 +3,7 @@
   max-width: 1200px;
   display: flex;
   justify-content: space-between;
+  align-items: center;
   box-sizing: border-box;
   padding: 30px 39px;
   margin: 0 auto;
@@ -13,5 +14,11 @@
 @media screen and (max-width: 1024px) {
   .header {
     padding: 15px 39px;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .header {
+    padding: 20px;
   }
 }
