--- a/src/styles/blocks/opened-petition/opened-petition.css
+++ b/src/styles/blocks/opened-petition/opened-petition.css
@@ -1,6 +1,6 @@
 .opened-petition {
   width: 100%;
-  margin: 0 auto;
+  margin: 0 auto 120px;
   background: #f4f5ff;
   box-shadow: 0px 4px 10px rgba(221, 224, 255, 0.4);
 }
