--- a/src/styles/blocks/sign-in-up-req/__btn/_type/sign-in-up-req__btn_publish.css
+++ b/src/styles/blocks/sign-in-up-req/__btn/_type/sign-in-up-req__btn_publish.css
@@ -4,6 +4,14 @@
   margin: 40px 0 60px;
 }
 
+@media screen and (max-width: 1024px) {
+  .sign-in-up-req__btn_publish {
+    width: 180px;
+    font-size: 16px;
+    margin-top: 20px;
+  }
+}
+
 @media screen and (max-width: 700px) {
   .sign-in-up-req__btn_publish {
     justify-self: center;
