--- a/src/styles/blocks/sign-in-up-req/__btn/_type/sign-in-up-req__btn_sign-up.css
+++ b/src/styles/blocks/sign-in-up-req/__btn/_type/sign-in-up-req__btn_sign-up.css
@@ -5,11 +5,16 @@
   margin-bottom: 70px;
 }
 
-@media screen and (max-width: 720px) {
+@media screen and (max-width: 1024px) {
   .sign-in-up-req__btn_sign-up {
-    width: 180px;
-    height: 40px;
-    font-size: 15px;
+    width: 120px;
+    font-size: 16px;
+    margin: 30px 0;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .sign-in-up-req__btn_sign-up {
     margin: 20px 0 47px;
     justify-self: center;
   }
