--- a/src/styles/blocks/sign-in-up-req/__container/sign-in-up-req__container.css
+++ b/src/styles/blocks/sign-in-up-req/__container/sign-in-up-req__container.css
@@ -4,16 +4,21 @@
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(3, max-content);
   align-items: center;
-  row-gap: 35px;
+  grid-row-gap: 35px;
   margin: 0 auto;
   box-sizing: border-box;
   padding: 0px 39px;
 }
 
-@media screen and (max-width: 720px) {
+@media screen and (max-width: 1024px) {
+  .sign-in-up-req__container {
+    grid-row-gap: 10px;
+  }
+}
+
+@media screen and (max-width: 700px) {
   .sign-in-up-req__container {
     grid-template-columns: 1fr;
-    row-gap: 10px;
     padding: 0px 20px;
   }
 }
