--- a/src/styles/blocks/sign-in-up-req/__description/sign-in-up-req__description.css
+++ b/src/styles/blocks/sign-in-up-req/__description/sign-in-up-req__description.css
@@ -4,9 +4,16 @@
   margin: 0;
 }
 
-@media screen and (max-width: 720px) {
+@media screen and (max-width: 1024px) {
   .sign-in-up-req__description {
     font-weight: 300;
+    font-size: 16px;
+    line-height: 120%;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .sign-in-up-req__description {
     font-size: 15px;
     line-height: 120%;
   }
