--- a/src/styles/blocks/sign-in-up-req/__title/sign-in-up-req__title.css
+++ b/src/styles/blocks/sign-in-up-req/__title/sign-in-up-req__title.css
@@ -5,7 +5,13 @@
   margin: 50px 0 0;
 }
 
-@media screen and (max-width: 720px) {
+@media screen and (max-width: 1024px) {
+  .sign-in-up-req__title {
+    font-size: 22px;
+  }
+}
+
+@media screen and (max-width: 700px) {
   .sign-in-up-req__title {
     font-size: 18px;
     margin: 0;
