--- a/src/styles/blocks/user/__question/user__question.css
+++ b/src/styles/blocks/user/__question/user__question.css
@@ -6,3 +6,9 @@
   text-align: center;
   color:#8E9295;
 }
+
+@media screen and (max-width: 1024px) {
+  .user__question  {
+    display: none;
+  }
+}
