--- a/src/styles/blocks/header/__log-container/header__log-container.css
+++ b/src/styles/blocks/header/__log-container/header__log-container.css
@@ -11,10 +11,17 @@
   padding: 30px 20px 24px 20px;
 }
 
+@media screen and (max-width: 1024px) {
+  .header__log-container  {
+    bottom: -130px;
+    left: -180px;
+    padding: 25px 20px;
+  }
+}
+
 @media screen and (max-width: 700px) {
   .header__log-container  {
     bottom: -125px;
     left: -160px;
-    padding: 25px 20px;
   }
 }
