--- a/src/styles/blocks/header/__quite-btn/header__quite-btn.css
+++ b/src/styles/blocks/header/__quite-btn/header__quite-btn.css
@@ -9,6 +9,12 @@
   padding: 0;
 }
 
+@media screen and (max-width: 1024px) {
+  .header__quite-btn  {
+    font-size: 18px;
+  }
+}
+
 @media screen and (max-width: 700px) {
   .header__quite-btn  {
     font-size: 16px;
