--- a/src/styles/blocks/opened-petition/__image/opened-petition__image.css
+++ b/src/styles/blocks/opened-petition/__image/opened-petition__image.css
@@ -6,6 +6,7 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  border-radius: 5px;
 }
 
 @media screen and (max-width: 1024px) {
