--- a/src/styles/blocks/user/__input/user__input.css
+++ b/src/styles/blocks/user/__input/user__input.css
@@ -10,11 +10,11 @@
   margin-bottom: 20px;
   box-sizing: border-box;
   box-shadow: 0px 4px 15px rgba(153, 162, 255, 0.3);
-  border-radius: 2px;
+  border-radius: 5px;
 }
 
 .user__input:hover {
-  outline: 1px solid #4F92F6;;
+  outline: 1px solid #4F92F6;
 }
 
 .user__input:focus {
@@ -26,6 +26,5 @@
     height: 30px;
     padding: 5px 10px;
     margin-bottom: 15px;
-    border-radius: 5px;
   }
 }
