--- a/src/styles/blocks/add-new/__button/_publish/add-new__button_publish.css
+++ b/src/styles/blocks/add-new/__button/_publish/add-new__button_publish.css
@@ -1,8 +1,14 @@
 .add-new__button_publish {
-  margin-top: 40px;
+  margin: 0;
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 800px) {
+  .add-new__button_publish {
+    margin-top: 105px;
+  }
+}
+
+@media screen and (max-width: 550px) {
   .add-new__button_publish {
     margin-top: 20px;
   }
