--- a/src/styles/blocks/add-new/__button/add-new__button.css
+++ b/src/styles/blocks/add-new/__button/add-new__button.css
@@ -1,9 +1,10 @@
 .add-new__button {
+  margin-top: 30px;
+  margin-bottom: 40px;
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 800px) {
   .add-new__button {
-    justify-self: center;
-    margin-top: 20px;
+
   }
 }
