--- a/src/styles/blocks/add-new/__container/add-new__container.css
+++ b/src/styles/blocks/add-new/__container/add-new__container.css
@@ -1,14 +1,18 @@
 .add-new__container {
-  grid-column: 1/3;
-  grid-row: 6;
+  width: 100%;
   display: flex;
   justify-content: flex-end;
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 800px) {
   .add-new__container {
-    grid-column: 1;
-    grid-row: 8;
+    padding-top: 30px;
+    justify-content: space-between;
+  }
+}
+
+@media screen and (max-width: 550px) {
+  .add-new__container {
     justify-content: center;
   }
 }
