--- a/src/styles/blocks/add-new/__image/add-new__image.css
+++ b/src/styles/blocks/add-new/__image/add-new__image.css
@@ -1,7 +1,7 @@
 .add-new__image {
   position: relative;
   width: 100%;
-  height: 228px;
+  max-width: 48%;
   background: rgba(215, 229, 250, 0.25);
   border-radius: 5px;
   cursor: pointer;
@@ -33,8 +33,9 @@
   opacity: 1;
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 550px) {
   .add-new__image {
-    height: 150px;
+    max-width: 100%;
+    height: 200px;
   }
 }
