--- a/src/styles/blocks/add-new/__poem-text/add-new__poem-text.css
+++ b/src/styles/blocks/add-new/__poem-text/add-new__poem-text.css
@@ -1,13 +1,11 @@
 .add-new__poem-text {
   width: 100%;
-  border: 2px solid rgba(28, 69, 131, 0.5);
   box-sizing: border-box;
   padding: 0 20px 20px;
-  margin: 0 0 30px;
-  border-top: none;
-  border-radius: 0 0 5px 5px;
+  margin: 0;
   font-size: 20px;
   line-height: 140%;
+  white-space: pre-line;
 }
 
 @media screen and (max-width: 1024px) {
