some bugs fixed

--- a/src/styles/blocks/sign-in-up-req/__btn/_type/sign-in-up-req__btn_sign-up.css
+++ b/src/styles/blocks/sign-in-up-req/__btn/_type/sign-in-up-req__btn_sign-up.css
@@ -13,9 +13,16 @@
   }
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 850px) {
   .sign-in-up-req__btn_sign-up {
-    margin: 20px 0 47px;
-    justify-self: center;
+    width: 45%;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .sign-in-up-req__btn_sign-up {
+    width: 69%;
+    margin-bottom: 15px;
+    margin-top: 0;
   }
 }
