--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,7 @@
 @import url(./styles/blocks/header/__button-container/header__button-container.css);
 @import url(./styles/blocks/header/__button-sing-up/header__button-sing-up.css);
 @import url(./styles/blocks/header/__quite-btn/header__quite-btn.css);
+@import url(./styles/blocks/header/__sign-in-mobile-icon/header__sign-in-mobile-icon.css);
 
 @import url(./styles/blocks/main/main.css);
 
@@ -68,6 +69,8 @@
 @import url(./styles/blocks/user/__image/user__image.css);
 @import url(./styles/blocks/user/__form/user__form.css);
 @import url(./styles/blocks/user/__question/user__question.css);
+@import url(./styles/blocks/user/__question/__place/user__question_place_header.css);
+@import url(./styles/blocks/user/__question/__place/user__question_place_user.css);
 @import url(./styles/blocks/user/__input/user__input.css);
 @import url(./styles/blocks/user/__input/_password/user__input_password.css);
 @import url(./styles/blocks/user/__pass-label/user__pass-label.css);
@@ -124,9 +127,11 @@
 @import url(./styles/blocks/sign-in-up-req/__container/sign-in-up-req__container.css);
 @import url(./styles/blocks/sign-in-up-req/__title/sign-in-up-req__title.css);
 @import url(./styles/blocks/sign-in-up-req/__description/sign-in-up-req__description.css);
+@import url(./styles/blocks/sign-in-up-req/__btns-wrapper/sign-in-up-req__btns-wrapper.css);
 @import url(./styles/blocks/sign-in-up-req/__btn/sign-in-up-req__btn.css);
 @import url(./styles/blocks/sign-in-up-req/__btn/_type/sign-in-up-req__btn_publish.css);
 @import url(./styles/blocks/sign-in-up-req/__btn/_type/sign-in-up-req__btn_sign-up.css);
+@import url(./styles/blocks/sign-in-up-req/__btn/_type/sign-in-up-req__btn_sign-in.css);
 @import url(./styles/blocks/sign-in-up-req/__image/sign-in-up-req__image.css);
 
 @import url(./styles/blocks/popup/popup.css);
