--- a/src/styles/blocks/categories/__selected/categories__selected.css
+++ b/src/styles/blocks/categories/__selected/categories__selected.css
@@ -20,9 +20,8 @@
 }
 
 @media screen and (max-width: 400px) {
-  .categories__popup-btn {
+  .categories__selected {
     font-size: 16px;
-    padding-left: 25px;
   }
   .categories__selected::after {
     height: 2px;
