--- a/src/styles/blocks/header/__button-container/header__button-container.css
+++ b/src/styles/blocks/header/__button-container/header__button-container.css
@@ -9,3 +9,9 @@
     grid-column-gap: 0;
   }
 }
+
+@media screen and (max-width: 800px) {
+  .header__button-container {
+    display: none;
+  }
+}
