--- a/src/styles/blocks/sign-in-up-req/__btn/_type/sign-in-up-req__btn_sign-in.css
+++ b/src/styles/blocks/sign-in-up-req/__btn/_type/sign-in-up-req__btn_sign-in.css
@@ -1,6 +1,26 @@
 .sign-in-up-req__btn_sign-in {
-  color: black;
-  border: 2px solid #8E4FF6;
-  border-image: linear-gradient(to right, #8E4FF6, #4F92F6);
-  border-image-slice: 1;
+  color: #02214F;
+  background: #FFFFFF;
+  border: 2px solid #3F5BFB;
+  box-sizing: border-box;
+  box-shadow: 0px 0px 7px rgba(153, 162, 255, 0.3);
+  border-radius: 5px;
+}
+
+@media screen and (min-width: 850px) {
+  .sign-in-up-req__btn_sign-in {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 850px) {
+  .sign-in-up-req__btn_sign-in {
+    width: 45%;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .sign-in-up-req__btn_sign-in {
+    width: 69%;
+  }
 }
