--- a/src/styles/blocks/sign-in-up-req/__btn/_type/sign-in-up-req__btn_publish.css
+++ b/src/styles/blocks/sign-in-up-req/__btn/_type/sign-in-up-req__btn_publish.css
@@ -2,6 +2,11 @@
   width: 190px;
   font-size: 19px;
   margin: 40px 0 60px;
+  transition: all .5s ease;
+}
+
+.sign-in-up-req__btn_publish:hover {
+  background: #632EBA;
 }
 
 @media screen and (max-width: 1024px) {
