--- a/src/styles/blocks/button/button.css
+++ b/src/styles/blocks/button/button.css
@@ -9,12 +9,19 @@
   line-height: 140%;
   font-weight: 700;
   text-decoration: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   color: white;
   cursor: pointer;
-  box-shadow: 0px 4px 10px rgba(153, 162, 255, 0.6);
+  -webkit-box-shadow: 0px 0px 10px rgba(153, 162, 255, 0.5);
+          box-shadow: 0px 0px 10px rgba(153, 162, 255, 0.5);
   border-radius: 5px;
 }
 
