--- a/src/styles/blocks/header/header.css
+++ b/src/styles/blocks/header/header.css
@@ -1,11 +1,11 @@
 .header {
   width: 100%;
-  max-width: 1200px;
+  max-width: 1113px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   box-sizing: border-box;
-  padding: 30px 39px;
+  padding: 30px 0;
   margin: 0 auto;
   border-bottom: 1px solid #DDE0FF;
   font-family: 'Alegreya', sans-serif;
