--- a/src/styles/blocks/sign-in-up-req/__btn/_type/sign-in-up-req__btn_sign-in.css
+++ b/src/styles/blocks/sign-in-up-req/__btn/_type/sign-in-up-req__btn_sign-in.css
@@ -2,8 +2,10 @@
   color: #02214F;
   background: #FFFFFF;
   border: 2px solid #3F5BFB;
-  box-sizing: border-box;
-  box-shadow: 0px 0px 7px rgba(153, 162, 255, 0.3);
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  -webkit-box-shadow: 0px 0px 7px rgba(153, 162, 255, 0.3);
+          box-shadow: 0px 0px 7px rgba(153, 162, 255, 0.3);
   border-radius: 5px;
 }
 
