--- a/src/styles/blocks/categories/__selected/categories__selected.css
+++ b/src/styles/blocks/categories/__selected/categories__selected.css
@@ -19,6 +19,12 @@
   z-index: 1;
 }
 
+@media screen and (max-width: 500px) {
+  .categories__selected {
+    font-size: 18px;
+  }
+}
+
 @media screen and (max-width: 400px) {
   .categories__selected {
     font-size: 16px;
