--- a/src/styles/blocks/header/header.css
+++ b/src/styles/blocks/header/header.css
@@ -11,6 +11,12 @@
   font-family: 'Alegreya', sans-serif;
 }
 
+@media screen and (max-width: 1200px) {
+  .header {
+    padding: 10px 35px;
+  }
+}
+
 @media screen and (max-width: 1024px) {
   .header {
     padding: 15px 39px;
